--- a/EIPS/eip-7870.md
+++ b/EIPS/eip-7870.md
@@ -16,9 +16,7 @@ This proposal specifies hardware and bandwidth recommendations for different typ
 - **Full nodes**: Nodes that follow the tip of the chain without necessarily proposing blocks.
 - **Validators**: Split into:
   - **Attesters**: Validators that validate and attest to blocks created by proposers.
-  - **Local block builders** (Proposers): Validators that create blocks locally and broadcast them to the network.
-
-The resource-intensive aspect for local block builders lies in creating the block and quickly broadcasting the data required for attesters to validate it in time.
+  - **Proposers**: Validators that create blocks using either a local execution layer client or an external block builder and broadcast them to the network.
 
 We note that it may be possible to run a client with less than the recommended specifications, however benchmarks and decision-making will be made with respect to these recommendations.
 
@@ -42,11 +40,12 @@ Without a shared understanding of target hardware specifications:
 
 Node operators typically run both an **Execution Layer (EL)** client and a **Consensus Layer (CL)** client on the same machine. The specifications below assume the combined resource usage of both.
 
-| Node Type               | Storage   | Memory | CPU Cores / Threads | **PassMark CPU Rating** | Bandwidth Download / Upload |
-| ----------------------- | --------- | ------ | ------------------- | ----------------------- | --------------------------- |
-| **Full Node**           | 4 TB NVMe | 32 GB  | 4c / 8t             | ~1000 ST / 3000 MT      | 50 Mbps / 15 Mbps           |
-| **Attester**            | 4 TB NVMe | 64 GB  | 8c / 16t            | ~3500 ST / 25000 MT     | 50 Mbps / 25 Mbps           |
-| **Local Block Builder** | 4 TB NVMe | 64 GB  | 8c / 16t            | ~3500 ST / 25000 MT     | 100 Mbps / 50 Mbps          |
+| Node Type                                   | Storage   | Memory | CPU Cores / Threads | **PassMark CPU Rating** | Bandwidth Download / Upload |
+| --------------------------------------------| --------- | ------ | ------------------- | ----------------------- | --------------------------- |
+| **Full Node**                               | 4 TB NVMe | 32 GB  | 4c / 8t             | ~1000 ST / 3000 MT      | 50 Mbps / 15 Mbps           |
+| **Attester**                                | 4 TB NVMe | 64 GB  | 8c / 16t            | ~3500 ST / 25000 MT     | 50 Mbps / 25 Mbps           |
+| **Proposer (Local Execution Layer client)** | 4 TB NVMe | 64 GB  | 8c / 16t            | ~3500 ST / 25000 MT     | 100 Mbps / 50 Mbps          |
+| **Proposer (External Builder)**             | 4 TB NVMe | 64 GB  | 8c / 16t            | ~3500 ST / 25000 MT     | 100 Mbps / 50 Mbps          |
 
 *Approximate single-thread (ST) and multi-thread (MT) PassMark CPU scores. For example, a PassMark ST rating of 3500 and an MT rating of 25000 typically corresponds to upper mid-range server CPUs circa 2024–2025.*
 
@@ -71,23 +70,33 @@ Node operators typically run both an **Execution Layer (EL)** client and a **Con
 - **Why 64 GB for Validators (Attester / Local Block Builder)?**
   - Running an Ethereum validator (both EL & CL clients) can be memory-intensive, with state cache dominating RAM usage.
   - Certain memory intensive client combinations have historically failed with 16 GB.  
-  - Preliminary benchmarks (e.g., [zk-STARK memory usage](https://hackmd.io/@han/bench-hash-in-snark)) suggest cryptographic operations can demand significant RAM.  
+  - Preliminary benchmarks (e.g., [zk-STARK memory usage](https://hackmd.io/@han/bench-hash-in-snark)) suggest cryptographic operations can demand significant RAM.
   - Relative to total hardware costs, upgrading from 32 GB to 64 GB is a small price but can improve stability and is more future proof with regards to zk-STARKS.
 
 ### CPU
 
 - **Single vs. Multi-thread Performance**
-  - Attesters and local block builders benefit from both high single-thread and multi-thread performance.  
+  - Attesters and local block builders benefit from both high single-thread and solid multi-thread performance.
 
 ### Bandwidth
 
-#### Local Block Builders
+#### Proposer
+
+##### Blocks built using a local execution layer client
 
 - **Recommended**: 100 Mbps download, 50 Mbps upload.
 - **Rationale**:  
-  - Distributing blocks is highly bandwidth-intensive.  
-  - If a builder cannot meet these speeds, they risk slower propagation and causing late blocks.  
+  - Distributing blocks is highly bandwidth-intensive as it's important to broadcast to as many peers in as short time as possible for attesters to attest to the block in time.
+  - If a builder cannot meet these speeds, they risk slower propagation and causing late blocks.
   - In extreme cases, a low-bandwidth node could propose partially full blocks or one that includes fewer blobs to mitigate slow broadcast.
+
+##### Blocks built using an external builder
+
+- **Recommended**: 50 Mbps download / 25 Mbps upload.
+- **Rationale**:
+  - Most MEV-relay interactions involve connecting to a relay and fetching bundles and block headers, which can be done within typical broadband speeds.
+  - While the local validator will still share the block with its peers, the relay will do the same which reduces the need for local bandwidth.
+  - However, there may be cases where your validator will still build a local block, such as if no MEV-relay responds or if the value of the MEV reward is lower than the minimum configuration set in MEV-Boost. In these circumstances, the recommendations for **Local Block Builders** would be relevant.
 
 #### Attesters
 
@@ -96,14 +105,6 @@ Node operators typically run both an **Execution Layer (EL)** client and a **Con
   - However, real-world performance depends on peer network topology. A node with poor bandwidth could in theory quickly share data with a well-connected peer with good bandwidth which means that this peer could quickly seed the network.
 - **Rationale**:
   - 25 Mbps was chosen as a buffer to account for these miscellaneous factors that are harder to predict.
-
-#### Validators Using MEV-Boost
-
-- **Recommended**: 50 Mbps download / 25 Mbps upload.
-- **Rationale**:
-  - Most MEV-relay interactions involve fetching bundles and block headers, which can be done within typical broadband speeds.
-  - While the local validator will also share the block with its peers, the relay will do the same which reduces the need for local bandwidth.
-  - However, there may be cases where your validator will still build a local block, such as if no MEV-relay responds or if the value of the MEV reward is lower than the minimum configuration set in MEV-Boost. In these circumstances, the recommendations for **Local Block Builders** would be relevant.
 
 #### Full Nodes
 
@@ -126,11 +127,17 @@ Node operators typically run both an **Execution Layer (EL)** client and a **Con
   - **CPU**: 8 cores / 16 threads (~3500 ST / ~25000 MT PassMark)  
   - **Bandwidth**: 50 Mbps down / 25 Mbps up  
 
-- **Local Block Builder**  
-  - **Storage**: 4 TB NVMe  
-  - **RAM**: 64 GB  
-  - **CPU**: 8 cores / 16 threads (~3500 ST / ~25000 MT PassMark)  
-  - **Bandwidth**: 100 Mbps down / 50 Mbps up  
+- **Proposer**
+  - **Local Execution Layer Client**  
+    - **Storage**: 4 TB NVMe  
+    - **RAM**: 64 GB  
+    - **CPU**: 8 cores / 16 threads (~3500 ST / ~25000 MT PassMark)  
+    - **Bandwidth**: 100 Mbps down / 50 Mbps up
+  - **External Builder**
+    - **Storage**: 4 TB NVMe  
+    - **RAM**: 64 GB  
+    - **CPU**: 8 cores / 16 threads (~3500 ST / ~25000 MT PassMark)  
+    - **Bandwidth**: 50 Mbps down / 25 Mbps up
 
 ## Backwards Compatibility
 
